--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "serve": "cross-env NODE_ENV=development concurrently \"postcss public/tailwind.css -o public/build/tailwind.css --watch\"  \"live-server ./public\"",
-    "development": "cross-env NODE_ENV=development postcss public/tailwind.css -o public/build/tailwind.css",
-    "production": "cross-env NODE_ENV=production postcss public/tailwind.css -o public/build/tailwind.css",
+    "serve": "cross-env NODE_ENV=development concurrently \"postcss public/tailwind.css -o public/assets/css/tailwind.css --watch\"  \"live-server ./public\"",
+    "development": "cross-env NODE_ENV=development postcss public/tailwind.css -o public/assets/css/tailwind.css",
+    "production": "cross-env NODE_ENV=production postcss public/tailwind.css -o public/assets/css/tailwind.css",
     "start": "npm run serve"
   },
   "dependencies": {
